# app/Http/Controllers/UsersController.php
@@ -47,9 +47,19 @@ class UsersController extends Controller
      *                         @OA\Property(property="current_page", type="integer", example=1),
      *                         @OA\Property(property="from", type="integer", example=1),
      *                         @OA\Property(property="last_page", type="integer", example=5),
-     *                         @OA\Property(property="path", type="string", example="http://example.com/api/posts"),
-     *                         @OA\Property(property="per_page", type="integer", example=15),
-     *                         @OA\Property(property="to", type="integer", example=15),
+     *                         @OA\Property(property="path", type="string", example="http://example.com/api/users"),
+     *                         @OA\Property(
+     *                             property="links",
+     *                             type="array",
+     *                             @OA\Items(
+     *                                 type="object",
+     *                                 @OA\Property(property="url", type="string", nullable=true, example="http://localhost/Blog/public/api/users?page=1"),
+     *                                 @OA\Property(property="label", type="string", example="1"),
+     *                                 @OA\Property(property="active", type="boolean", example=true)
+     *                             )
+     *                         ),
+     *                         @OA\Property(property="per_page", type="integer", example=20),
+     *                         @OA\Property(property="to", type="integer", example=20),
      *                         @OA\Property(property="total", type="integer", example=50)
      *                     ),
      *                 ),
@@ -75,7 +85,7 @@ class UsersController extends Controller
             'roles:id,name',
             'roles.permissions'
         ])->paginate(15);
-        $roles = Role::get();
+        $roles = Role::query()->get();
         return response()->json([
             'status' => 'Success',
             'message' => 'All Users and Their Roles and All Available Roles',
